--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   align-items: center;
   justify-content: center;
   background-color: #282c34;
+  position: relative;
+}
+
+h1 {
+  color: white
+}
+
+h3 {
+  font-size: 24px;
 }
 
 .game {
@@ -15,8 +24,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  background-color: azure;
-  border: 1px solid white;
+  background-color: blue;
   border-radius: 50px;
 }
 
@@ -32,10 +40,28 @@
   position: relative;
 }
 
+.heart {
+  width: 150px;
+  height: 150px;
+  background-color: skyblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.core {
+  width: 90px;
+  height: 90px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .player {
   width: 50px;
   height: 50px;
-  background-color: rosybrown;
+  background-color: orange;
   border-radius: 50px;
   margin: 25px;
   position: absolute;
