--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ h3 {
 .gameCenter {
   width: 420px;
   height: 420px;
-  background-color: deepskyblue;
+  background-color: #282c34;
+  background-image: url('./media/gameCenter.svg');
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,25 +44,25 @@ h3 {
 .heart {
   width: 150px;
   height: 150px;
-  background-color: skyblue;
+  background-image: url('./media/heart-triangles.svg');
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.core {
-  width: 90px;
-  height: 90px;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.heart:hover {
+  border: 1px solid white;
+}
+
+#Medal {
+  width: 100px;
+  height: 100px;
 }
 
 .player {
   width: 50px;
   height: 50px;
-  background-color: orange;
+  background-color: white;
   border-radius: 50px;
   margin: 25px;
   position: absolute;
@@ -99,7 +100,7 @@ h3 {
 }
 
 .Line_3 {
-  right: 0;
+  right: -15px;
   transform: rotate(90deg)
 }
 
